@@ -2,6 +2,8 @@ Update Versions.java on adding new versions
 
 1.3.0
 New feature: `GLFWindow` is `AutoCloseable` now
+New feature: You can set resized to window
+New feature: `iVertexBuilder` has rendering function
 
 1.2.0
 New feature: `IVertexBuilder`
